# mako-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  check.py  docker-compose.yml  pyproject.toml  requirements.txt  test-.py  test.py
.github/workflows/: ci.yml
deploy/: docker-compose.yml
eval/: search_cases.yaml
frontend/dashboard/: index.html  package.json
frontend/dashboard/src/: main.jsx  styles.css
scripts/: healthcheck.sh
src/: __init__.py  app.py
src/core/: bootstrap.py  config.py  errors.py  logging.py  prompts.py
src/models/: __init__.py  schemas.py
src/plugins/: __init__.py  autonomy.py  chat.py  chat_delivery.py  chat_reminders.py  governance.py  health.py  precipitate_knowledge.py  relationship_followups.py  scheduler.py  vector_db.py  weather.py  what_to_eat.py
src/plugins/chat/: _state.py
src/plugins/dashboard/: __init__.py
src/services/: affinity.py  amap.py  chat_audit.py  chat_context.py  chat_engine.py  chat_policy.py  chat_rhythm.py  emoji.py  gemini.py  governance.py  http.py  image.py  intent.py  knowledge_precipitation.py  language.py  llm.py  mako_context.py  news.py  notes.py  outbound_dedup.py  redis.py  relationship.py  reminder.py  response_style.py  search.py  search_metrics.py  storage.py  tool_executor.py  vector_store.py  weather.py
src/utils/: message.py
src/web/: __init__.py
src/web/dashboard/: __init__.py  schemas.py  service.py
src/web/dashboard/static/: README.md  index.html
src/web/dashboard/static/assets/: dashboard.css  dashboard.js
test/: docker-compose.yml  test-.py  test_application_boot.py  test_autonomy_runtime.py  test_bootstrap.py  test_chat_context.py  test_chat_delivery.py  test_chat_engine.py  test_chat_plugin_import.py  test_chat_policy.py  test_chat_rhythm.py  test_config_safety.py  test_governance_availability.py  test_governance_plugin_import.py  test_image_safety.py  test_intent_service.py  test_knowledge_precipitation.py  test_llm_config.py  test_mako_context.py  test_news.py  test_news_storage.py  test_ollama_search.py  test_outbound_dedup.py  test_redis_recovery.py  test_relationship_service.py  test_reminder_domain.py  test_reminder_persistence.py  test_search_metrics.py  test_search_security.py  test_storage_history_migration.py  test_tool_executor_policy.py
tools/: audit_tui.py  incident_tui.py
