[project]
name = "mako-bot"
version = "0.1.0"
description = "mako-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "nonebot2>=2.4.0",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-localstore>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.0",
    "httpx>=0.27.0",
    "redis>=6.0.0",
    "loguru>=0.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "numpy>=1.26.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = ["nonebot_plugin_apscheduler","nonebot_plugin_lagrange"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
