[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mako-bot"
version = "0.1.0"
description = "A stateful, persona-driven QQ agent built on NoneBot2 and OneBot V11"
readme = "README.md"
requires-python = ">=3.10, <4.0"
dependencies = [
    "nonebot2>=2.4.0,<3",
    "nonebot-adapter-onebot>=2.4.0,<3",
    "nonebot-plugin-apscheduler>=0.5.0,<1",
    "nonebot-plugin-localstore>=0.7.0,<1",
    "nonebot-plugin-lagrange>=1.1.0,<2",
    "pydantic>=2.0.0,<3",
    "pydantic-settings>=2.0.0,<3",
    "openai>=1.0.0,<2",
    "google-generativeai>=0.8.0,<1",
    "httpx>=0.27.0,<1",
    "redis>=6.0.0,<7",
    "loguru>=0.7.0,<1",
    "fastapi>=0.100.0,<1",
    "uvicorn>=0.30.0,<1",
    "python-dotenv>=1.0.0,<2",
    "numpy>=1.26.0,<3",
    "pillow>=10.0.0,<12",
    "sentence-transformers>=3.0.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24.0,<2",
]

[project.scripts]
mako-bot = "src.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src" = ["mako.jpg"]
"src.web.dashboard" = ["static/**/*"]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"}
]
plugins = ["nonebot_plugin_apscheduler","nonebot_plugin_lagrange"]
plugin_dirs = ["src/plugins"]
builtin_plugins = []
